default Endpoint in YASGUI geändert

--- a/data/public/sparql/index.html
+++ b/data/public/sparql/index.html
@@ -13,7 +13,7 @@
 
   <script src="dist/yasgui.bundled.js"></script>
 	 <script type="text/javascript">
-		 YASGUI.YASQE.defaults.sparql.endpoint = 'http://data.admin.ch/datenbank/sparql/';
+		 YASGUI.YASQE.defaults.sparql.endpoint = 'http://data.alod.ch/alod/sparql';
 
 		 var yasgui = YASGUI(document.getElementById('showcase'));
 
