Graph-Filter Option hinzugefügt

--- a/data/public/search/index.html
+++ b/data/public/search/index.html
@@ -12,6 +12,15 @@
 					<div class="form-group">
 						<input id="search-string" type="text" class="form-control" placeholder="Search">
 					</div>
+
+					<select id="search-graph" class="form-control">
+						<option value="">alle</option>
+						<option value="http://data.alod.ch/graph/bs">Basel-Stadt</option>
+						<option value="http://data.alod.ch/graph/ne">Neuenburg</option>
+						<option value="http://data.alod.ch/graph/ge">Genf</option>
+						<option value="http://data.alod.ch/graph/bar">Bundesarchiv</option>
+					</select>
+
 					<button id="search" class="btn btn-default">Submit</button>
 				</div>
 			</div>
