--- a/data/public/search/index.html
+++ b/data/public/search/index.html
@@ -18,6 +18,7 @@
 						<option value="http://data.alod.ch/graph/bs">Basel-Stadt</option>
 						<option value="http://data.alod.ch/graph/ne">Neuenburg</option>
 						<option value="http://data.alod.ch/graph/ge">Genf</option>
+						<option value="http://data.alod.ch/graph/vs">Wallis</option>
 						<option value="http://data.alod.ch/graph/bar">Bundesarchiv</option>
 					</select>
 
