--- a/data/public/search/index.html
+++ b/data/public/search/index.html
@@ -10,7 +10,7 @@
 			<div class="collapse navbar-collapse">
 				<div class="navbar-form navbar-left" role="search">
 					<div class="form-group">
-						<input id="search-string" type="text" class="form-control" placeholder="Search">
+						<input id="search-string" type="text" class="form-control" placeholder="Search" autofocus>
 					</div>
 
 					<select id="search-graph" class="form-control">
