--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -23,20 +23,19 @@ class: center, middle
 
 # ALOD Präsentation
 
-Bundesarchiv, 12. Februar 2015
+## Bundesarchiv, 12. Februar 2015
+
+Adrian Gschwend, Michael Luggen
+
+Zazuko GmbH
 
 ---
 
 # Agenda
 
-1. Einführung
-2. Deep-dive
-3. ...
-
----
-
-# Einführung
-
+1. Einführung & Ziele von ALOD
+2. Vom Web of Documents zu Linked Data
+3. Ideen für die Zukunft
 
 ---
 
@@ -57,21 +56,13 @@ background-image: url(img/web_documents.png)
 
 background-image: url(img/web_url.png)
 
-# Web of Documents: URL als eindeutiger Identifikator
-
----
-
-background-image: url(img/web_url.png)
-
-# Web of Documents: URL als eindeutiger Identifikator
+# URL als eindeutiger Identifikator
 
 ---
 
 background-image: url(img/proposal.gif)
 
 # Wer hats erfunden?
-
-Nicht die Schweizer, aber beim CERN in Genf
 
 ---
 
@@ -93,7 +84,11 @@ background-image: url(img/China-News.png)
 
 ---
 
-background-image: url(img/web_documents.png)
+background-image: url(img/Pieter_Bruegel-Tower_Of_Babel.jpg)
+
+# Babylonsiche Sprachverwirrung
+
+---
 
 # Dezentrale Datenbanken
 
@@ -102,12 +97,6 @@ background-image: url(img/web_documents.png)
 * Zwischen den Datenbanken herrscht Sprachverwirrung
 * Sowohl technisch wie inhaltlich (Semantik)
 * Datensatzübergreifende Suche und Verlinkung ist nicht möglich
-
----
-
-background-image: url(img/Pieter_Bruegel-Tower_Of_Babel.jpg)
-
-# Babylonsiche Sprachverwirrung
 
 ---
 
@@ -136,7 +125,7 @@ Was wären Anforderungen?
 
 background-image: url(img/Things.jpg)
 
-# Dies auszudrücken muss möglich sein
+# Kann dies Ihre Datenbank repräsentieren?
 
 ---
 
@@ -153,19 +142,13 @@ background-image: url(img/Things.jpg)
 
 # Datenmodell
 
-![Ein Ding](img/AThing.png)
+![Ein Ding](img/AThing.svg)
 
 ---
 
 # RDF Datenmodell
 
-![Ein Ding mit URIs](img/AThing2.png)
-
----
-
-# Wenn wir das anwenden
-
-![Clearup Things](img/TheFarSide-ClearUpThings.jpg)
+![Ein Ding mit URIs](img/AThing2.svg)
 
 ---
 
@@ -175,22 +158,29 @@ background-image: url(img/Things.jpg)
 
 ---
 
-# Beispiel: Peter Ochs
-
-* Kommt im Datensatz von Basel vor
-* Gibts in Wikipedia
-* Gibts in GND und F TODO
-
-
-
+background-image: url(img/TheFarSide-ClearUpThings.jpg)
 
 ---
 
-Ablauf
-* Die Brücke zu Daten machen, sprich Datenbanken mti Dokumenten als Seite
-* Dann zeigen, dass dies quasi die China Sprachverwirrung ist. Ich muss mich mit den Daten auskennen
-* Es herrscht Babylonische Sprachverwirrung
-* Dann zu Maschinenlesbarkeit überehen um das Problem zu löse
+background-image: url(img/OchsHistLex.png)
+
+# Peter Ochs (HLS)
+
+---
+
+background-image: url(img/ochs.ttl.svg)
+
+# Peter Ochs (GND, RDF Sicht)
+
+---
+
+background-image: url(img/ochs-stanbol.png)
+
+# Extrahieren von Schlüsselwörtern
+
+---
+
+background-image: url(img/LinkedOpenDataCloud2014.svg)
 
 ---
 
