--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -125,7 +125,7 @@ Was wären Anforderungen?
 
 background-image: url(img/Things.jpg)
 
-# Kann dies Ihre Datenbank repräsentieren?
+# Try this!
 
 ---
 
@@ -183,6 +183,17 @@ background-image: url(img/ochs-stanbol.png)
 background-image: url(img/LinkedOpenDataCloud2014.svg)
 
 ---
+
+# CH LOD
+
+* Bereitstellen von CH Referenzen als Linked Data
+  * BFS (Hist. Gemeinde etc)
+  * Historisches Lexikon der Schweiz
+  *  
+
+---
+
+
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
