--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -8,10 +8,14 @@
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-      body { font-family: 'Droid Serif'; }
+      body { font-family: 'Droid Serif';  font-size: 300%;}
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
+        background-color: rgba(255,255,255,0.92);
+        padding-left: 50px;
+        padding-right: 50px;
+        
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
     </style>
