--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -4,18 +4,21 @@
     <title>Title</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
-      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-      @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+      @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-      body { font-family: 'Droid Serif';  font-size: 300%;}
+      body { font-family: 'Roboto';}
       h1, h2, h3 {
-        font-family: 'Yanone Kaffeesatz';
+        font-family: 'Roboto';
         font-weight: normal;
         background-color: rgba(255,255,255,0.92);
+        margin-left: -50px;
         padding-left: 50px;
         padding-right: 50px;
-        
+        margin-right: -50px;
+      }
+      p, li {
+        font-size: 150%;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
     </style>
