--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -193,12 +193,22 @@ background-image: url(img/LinkedOpenDataCloud2014.svg)
 
 # CH LOD
 
-* Bereitstellen von CH Referenzen als Linked Data
-  * BFS (Hist. Gemeinde etc)
-  * Historisches Lexikon der Schweiz
-  *  
+Bereitstellen von CH Referenzen als Linked Data
+* BFS (Kanton/Bezirk/Gemeinde etc.)
+* Historisches Lexikon der Schweiz
+* ? 
 
 ---
+
+## Linked Data
+Technische Interoperalität
+
+## Open Data
+Politische Interoperabilität
+
+---
+
+
 
 
 
