--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -93,7 +93,7 @@ background-image: url(img/China-News.png)
 
 background-image: url(img/Pieter_Bruegel-Tower_Of_Babel.jpg)
 
-# Babylonsiche Sprachverwirrung
+# Babylonische Sprachverwirrung
 
 ---
 
@@ -123,10 +123,10 @@ Was wären Anforderungen?
 * Ein gemeinsames Austauschformat
 * Semantik muss Teil der Daten sein
 * Mehrsprachigkeit muss im Kern unterstützt sein
-* Muss jegwelche Beziehungen zwischen Daten ausdrücken können
+* Muss jegliche Beziehungen zwischen Daten ausdrücken können
 * Beziehungen zwischen Datensätzen/Silos können ausgedrückt werden
 * Dezentrale Datenhaltung/Pflege muss möglich sein
-* Datensatzübergreiffende Abfragen müssen möglich sein
+* Datensatzübergreifende Abfragen müssen möglich sein
 
 ---
 
@@ -143,7 +143,7 @@ background-image: url(img/Things.jpg)
 * Web (HTTP) als Transportmedium
 * Links (URIs) als (dezentrale) Identifikatoren
 * Mehrsprachigkeit im Datenmodell
-* SPARQL als standartisierte Abfragesprache
+* SPARQL als standardisierte Abfragesprache
 
 ---
 
@@ -201,12 +201,13 @@ Bereitstellen von CH Referenzen als Linked Data
 ---
 
 ## Linked Data
-Technische Interoperalität
+Technische Interoperabilität
 
-## Open Data
+## Open Data
 Politische Interoperabilität
 
 ---
+
 
 
 
