--- a/data/presentation/alod.html
+++ b/data/presentation/alod.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>A lot of ALOD</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,400italic);
@@ -28,7 +28,7 @@
 
 class: center, middle
 
-# ALOD Präsentation
+# A lot of ALOD
 
 ## Bundesarchiv, 12. Februar 2015
 
@@ -42,7 +42,8 @@ Zazuko GmbH
 
 1. Einführung & Ziele von ALOD
 2. Vom Web of Documents zu Linked Data
-3. Ideen für die Zukunft
+3. Demo
+4. Ideen für die Zukunft
 
 ---
 
@@ -113,7 +114,7 @@ Kaum realistisch:
 * Es gibt nicht eine Wahrheit
 * Entspricht in der Schweiz nicht der föderalen Arbeitsweise
 * Funktioniert selbst in nicht föderalen Systemen eher selten
-* Technisch wie inhaltlich ein Handstand
+* Technisch wie inhaltlich anspruchsvoll
 
 ---
 
@@ -144,6 +145,12 @@ background-image: url(img/Things.jpg)
 * Links (URIs) als (dezentrale) Identifikatoren
 * Mehrsprachigkeit im Datenmodell
 * SPARQL als standardisierte Abfragesprache
+
+---
+
+background-image: url(img/METROPOLIS_machine.jpg)
+
+# Maschinenlesbarkeit
 
 ---
 
@@ -189,6 +196,8 @@ background-image: url(img/ochs-stanbol.png)
 
 background-image: url(img/LinkedOpenDataCloud2014.svg)
 
+# Linked Open Data Cloud
+
 ---
 
 # CH LOD
@@ -200,6 +209,57 @@ Bereitstellen von CH Referenzen als Linked Data
 
 ---
 
+# ALOD Demo
+
+* Datensatzübergreifende Suche
+* Daten in separaten Namensräumen (Domänen)
+* Identifikatoren (URIs) pro Datensatz
+* Abfrage der Daten in unterschiedlichen Formaten
+* Tektonik
+* SPARQL Abfragen
+* Implizites Wissen explizit zugänglich machen
+
+---
+
+# Stand heute
+
+* Read-only Daten; aus bestehenden Systemen
+* Zusätzliche Verknüpfungen für bessere Auffindung
+* Verschlagwortung auf unterschiedlichen Ebenen
+* "Das Ganze ist mehr als die Summe seiner Teile"
+
+---
+
+# Zukunft
+
+* Crowdsourcing Schnittstellen (z.b. für Historiker)
+* Bedingt Erstellung neuer Daten
+* Einbindung von weiteren externen Daten, z.B. wissenschaftlichen Arbeiten
+* Abgrenzung in der Suche: Mit oder ohne Drittdaten
+* Unterschiedlicher Detailgrad bei Sicht Daten: Anonymer vs. authentifizierter Zugriff
+* Bessere Einbindung von externen Referenzen wie VIAF, GND, BNF
+
+---
+
+background-image: url(img/timbre-gnd.ttl.svg)
+
+# Externe Datenquellen, Beispiel
+
+---
+
+# Einbindung in Webseiten
+
+* Daten können z.b. als JSON-LD direkt in Webseiten eingebunden werden
+* Duplikation von Daten für Webseite entfällt so
+
+---
+
+background-image: url(img/JSON-LD-HTML.png)
+
+---
+
+# Linked Data & Open Data
+
 ## Linked Data
 Technische Interoperabilität
 
@@ -208,10 +268,18 @@ Politische Interoperabilität
 
 ---
 
+background-image: url(img/metropolis-5.jpg)
 
+# Danke! Fragen?
 
+---
 
+# Kontakt
 
+adrian.gschwend@zazuko.com
+michael.luggen@zazuko.com
+
+---
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
