start site french

--- a/data/public/index.html
+++ b/data/public/index.html
@@ -20,29 +20,78 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-1">
+			<div class="col-md-1">
 				<img class="img-responsive" src="/images/Coat_of_arms_of_Switzerland.svg" />
 			</div>
-
-			<div class="col-xs-11">
+			<div class="col-md-5">
 				<h1 data-i18n="headline">ALOD</h1>
-				<h2 data-i18n="subheading">Archive Linked Open Data</h2>
+				<h2 data-i18n="subheading">Archival Linked Open Data</h2>
+      </div>
+     </div>
+		<div class="row">
+			<div class="col-md-offset-1 col-md-7">
+                Le domaine <a href="http://data.alod.ch">data.alod.ch</a> constitue le point d'entrée de la description du projet. Il s'agit d'un prototype dont l'objectif est de servir de banc de test pour l'évaluation du potentiel de la technologie Linked Data (LD) dans le domaine des archives.<br>
+                <br>
+                Les jeux de données sont limités à deux thématiques spécifiques: la <a href="http://www.hls-dhs-dss.ch/textes/f/F9797.php">République helvétique</a> et la <a href="http://www.hls-dhs-dss.ch/textes/f/F9798.php">Médiation</a>.<br>
+                <br>
+                Les données elles-mêmes sont représentées par les domaines liés à chaque institution. (<a href="http://data.ge.alod.ch">data.ge.alod.ch</a>, <a href="http://data.ne.alod.ch">data.ne.alod.ch</a>, <a href="http://data.vs.alod.ch">data.vs.alod.ch</a>, <a href="http://data.staatsarchiv-bs.ch">data.staatsarchiv-bs.ch</a>, <a href="http://data.alod.ch">data.alod.ch</a>) <br>
+                <br>
+                Ce site, mis à disposition par le projet A-LOD, offre :<br>
+                <ul> 
+                    <li>des données <b>déréférençables</b>  par leurs URIs  (par ex. <a href="http://data.ge.alod.ch/id/archivalresource/adl-j-125">http://data.ge.alod.ch/id/archivalresource/adl-j-125</a>, <a href="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633c-a-12-fasc-2">http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633c-a-12-fasc-2</a>) </li>
+                    <li>une <b>interface de recherche</b> plein-texte avec une mise en forme basique des résultaits</li>
+                    <li>une interface technique <b>SPARQL</b></li>
+                </ul>
+ 
+                Un groupe informel, composé d’archivistes en activité dans cinq institutions publiques suisses, intéressé à la problématique du LD s’est formé en Suisse en 2014 pour identifier le potentiel de cette technologie sur la base d'un prototype.
+                Les objectifs principaux de A-LOD sont :<br>
+                <ul>
+                    <li>     <b>examiner</b> les opportunités du LD pour la réalisation de la mission des institutions archivistiques</li>
+                    <li>     <b>configurer</b> une infrastucture LD </li>
+                    <li>     <b>développer</b> des “bonnes pratiques” pour transformer des inventaires existants en format LD (RDF)</li>
+                    <li>     tester ce processus sur un thème historique commun aux institutions (République helvétique, Médiation)</li>
+                    <li>     rendre les jeux de données en RDF accessibles sur une plate-forme commune</li>
+                    <li>     <b>communiquer</b> la plus-value de l’approche LD par des exemples concrets</li>
+                    <li>     <b>diffuser</b> les acquis du projet au sein de la communauté archivistique.</li>
+                </ul>
+ 
 
+<!--
+Partnerinstitute des Projektes :
+<a href="http://www.bar.admin.ch/">Schweizerisches Bundesarchiv</a>
+<a href="http://www.staatsarchiv.bs.ch/">Staatsarchiv Basel</a>
+<a href="http://www.ne.ch/archives">Staatsarchiv Neuchâtel</a>
+<a href="http://www.vs.ch/Navig/navig.asp?MenuID=20179">Staatsarchiv Valais</a>
+<a href="http://etat.geneve.ch/dt/archives/">Staatsarchiv Genf</a>
+Stadtarchiv Baden
+-->
+
+			</div>
+			<div class="col-md-3">
 				<p>
 					<a data-i18n="search.link" href="/search/">Here</a>
 					<span data-i18n="search.text">
 						you can search the archive.
-     </span>
+					</span>
 				</p>
-
 				<p>
 					<a data-i18n="sparql.link" href="/sparql/">SPARQL</a>
 					<span data-i18n="sparql.text">
 						queries can be executed with the browser interface.
 					</span>
 				</p>
+                <h3>Institutions parties prenantes du projet :</h3>
+                <ul>
+                    <li><a href="http://www.bar.admin.ch/">Archives fédérales suisses</a></li>
+                    <li><a href="http://www.ne.ch/archives">Archives de l’Etat de Neuchâtell</a></li>
+                    <li><a href="http://www.vs.ch/Navig/navig.asp?MenuID=20179">Archives de l’Etat du Valais</a></li>
+                    <li><a href="http://etat.geneve.ch/dt/archives/">Archives d’Etat de Genève</a></li>
+                    <li><a href="http://www.staatsarchiv.bs.ch/">Archives cantonales de Bâle-Ville</a></li>
+                    <li>Archives de la Ville de Baden</li>
+                </ul>
+                <h3>Ouverture des métadonnées en CC0.</h3>
+                Les métadonnées mises à disposition dans le cadre du projet sont utilisables selon les termes de la licence <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 (Creative Commons Zero)</a>. Les données peuvent ainsi être librement copiées, modifiées et distribuées.                 
 			</div>
-
 		</div>
 	</div>
 
