--- a/data/public/index.html
+++ b/data/public/index.html
@@ -21,7 +21,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-1">
-				<img class="img-responsive" src="/images/Coat_of_arms_of_Switzerland.svg" />
+				<img class="img-responsive" style="width: 68px" src="/images/Coat_of_arms_of_Switzerland.svg" />
 			</div>
 			<div class="col-md-5">
 				<h1 data-i18n="headline">ALOD</h1>
