--- a/data/public/index.html
+++ b/data/public/index.html
@@ -83,7 +83,7 @@ Stadtarchiv Baden
                 <h3>Institutions parties prenantes du projet :</h3>
                 <ul>
                     <li><a href="http://www.bar.admin.ch/">Archives fédérales suisses</a></li>
-                    <li><a href="http://www.ne.ch/archives">Archives de l’Etat de Neuchâtell</a></li>
+                    <li><a href="http://www.ne.ch/archives">Archives de l’Etat de Neuchâtel</a></li>
                     <li><a href="http://www.vs.ch/Navig/navig.asp?MenuID=20179">Archives de l’Etat du Valais</a></li>
                     <li><a href="http://etat.geneve.ch/dt/archives/">Archives d’Etat de Genève</a></li>
                     <li><a href="http://www.staatsarchiv.bs.ch/">Archives cantonales de Bâle-Ville</a></li>
