--- a/modules/alod-web-interface/public/search-result-list.html
+++ b/modules/alod-web-interface/public/search-result-list.html
@@ -15,7 +15,7 @@
     <div class="eight columns">
         <input id="query" class="zack-query-input zack-big twelve columns" type="text" placeholder="Refine Results with Keywords.">
     </div>
-    <div class="four columns">
+    <div class="four columns space">
         <select id="filter" data-query-filter="http://data.archiveshub.ac.uk/def/" class="zack-filter-select zack-big u-pull-right">
             <option selected>-</option>
             <option value="http://data.alod.ch/alod/level/fond">Fonds</option>
@@ -39,7 +39,7 @@
             after <input id="from" type="date"> and 
             before <input id="to" type="date">.
         </div>
-        <div class="two columns">
+        <div class="two columns space">
             <div id="count" class="zack-count zack-big">
             </div>
         </div>
