--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -45,6 +45,6 @@
         </div>
     </div>
 </div>
-<script src="search-result-list.js"></script>
+<script src="zack.js"></script>
 </body>
 </html>
