--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Zack</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>aLOD Search :: Zack ☇</title>
 
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,400italic,700italic,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="normalize.css" rel="stylesheet">
