--- a/data/public/index.html
+++ b/data/public/index.html
@@ -24,7 +24,7 @@
 				<img class="img-responsive" style="width: 68px" src="/images/Coat_of_arms_of_Switzerland.svg" />
 			</div>
 			<div class="col-md-5">
-				<h1 data-i18n="headline">ALOD</h1>
+				<h1 data-i18n="headline">aLOD</h1>
 				<h2 data-i18n="subheading">Archival Linked Open Data</h2>
       </div>
      </div>
@@ -36,7 +36,7 @@
                 <br>
                 Les données elles-mêmes sont représentées par les domaines liés à chaque institution. (<a href="http://data.ge.alod.ch">data.ge.alod.ch</a>, <a href="http://data.ne.alod.ch">data.ne.alod.ch</a>, <a href="http://data.vs.alod.ch">data.vs.alod.ch</a>, <a href="http://data.staatsarchiv-bs.ch">data.staatsarchiv-bs.ch</a>, <a href="http://data.alod.ch">data.alod.ch</a>) <br>
                 <br>
-                Ce site, mis à disposition par le projet A-LOD, offre :<br>
+                Ce site, mis à disposition par le projet aLOD, offre :<br>
                 <ul> 
                     <li>des données <b>déréférençables</b>  par leurs URIs  (par ex. <a href="http://data.ge.alod.ch/id/archivalresource/adl-j-125">http://data.ge.alod.ch/id/archivalresource/adl-j-125</a>, <a href="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633c-a-12-fasc-2">http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633c-a-12-fasc-2</a>) </li>
                     <li>une <b>interface de recherche</b> plein-texte avec une mise en forme basique des résultaits</li>
@@ -44,7 +44,7 @@
                 </ul>
  
                 Un groupe informel, composé d’archivistes en activité dans cinq institutions publiques suisses, intéressé à la problématique du LD s’est formé en Suisse en 2014 pour identifier le potentiel de cette technologie sur la base d'un prototype.
-                Les objectifs principaux de A-LOD sont :<br>
+                Les objectifs principaux de aLOD sont :<br>
                 <ul>
                     <li>     <b>examiner</b> les opportunités du LD pour la réalisation de la mission des institutions archivistiques</li>
                     <li>     <b>configurer</b> une infrastucture LD </li>
