added level filter

--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -18,11 +18,11 @@
         <input id="query" class="zack-query-input zack-big twelve columns" type="text" placeholder="Refine Results with Keywords.">
     </div>
     <div class="four columns space">
-        <select id="filter" data-query-filter="http://data.archiveshub.ac.uk/def/" class="zack-filter-select zack-big u-pull-right">
-            <option selected>-</option>
+        <select id="level-filter" data-query-filter="http://data.archiveshub.ac.uk/def/level" class="zack-filter-select zack-big u-pull-right">
+            <option value="" selected>-</option>
             <option value="http://data.alod.ch/alod/level/fond">Fonds</option>
-            <option value="http://data.alod.ch/alod/level/item">Series</option>
-            <option value="http://data.alod.ch/alod/level/series">Items</option>
+            <option value="http://data.alod.ch/alod/level/item">Items</option>
+            <option value="http://data.alod.ch/alod/level/series">Series</option>
         </select>
     </div>
 </div>
