--- a/data/public/zack/zack.html
+++ b/data/public/zack/zack.html
@@ -20,8 +20,9 @@
             <select id="zack-document-type" data-predicate="http://data.archiveshub.ac.uk/def/" class="zack-filter-select zack-big u-pull-right">
                 <option selected>-</option>
                 <option data-object="http://data.alod.ch/alod/level/fond">Fonds</option>
-                <option data-object="http://data.alod.ch/alod/level/item">Series</option>
                 <option data-object="http://data.alod.ch/alod/level/series">Items</option>
+                <option data-object="http://data.alod.ch/alod/level/file">Files</option>
+                <option data-object="http://data.alod.ch/alod/level/item">Series</option>
             </select>
         </div>
     </div>
