--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -21,9 +21,9 @@
                 <option value='' selected>-</option>
                 <option value="http://data.alod.ch/alod/level/fond">Fonds</option>
                 <option value="http://data.alod.ch/alod/level/subfond">Sub-Fonds</option>
-                <option value="http://data.alod.ch/alod/level/item">Series</option>
+                <option value="http://data.alod.ch/alod/level/series">Series</option>
                 <option value="http://data.alod.ch/alod/level/file">Files</option>
-                <option value="http://data.alod.ch/alod/level/series">Items</option>
+                <option value="http://data.alod.ch/alod/level/item">Items</option>
             </select>
         </div>
     </div>
