--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -27,7 +27,7 @@
             </select>
         </div>
     </div>
-    <div class="zack-filter">
+    <div class="zack-filter" style="display: none">
             <div data-filter-type="subhierarchy" data-object="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
             <div data-filter-type="constraint" data-predicate="http://data.alod.ch/alod/conceptTag" data-object="tribunal civil" class="filter-item">Concept: trinunal civil</div>
     </div>
