--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -17,7 +17,7 @@
             <input autofocus id="query" class="zack-query-input zack-big twelve columns" type="text" placeholder="Refine Results with Keywords.">
         </div>
         <div class="four columns space">
-            <select id="level-filter"  data-filter="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-term-type="NamedNode" class="zack-filter-select zack-big u-pull-right">
+            <select id="level-filter" data-filter="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-named-node class="zack-filter-select zack-big u-pull-right">
                 <option value='' selected>-</option>
                 <option value="http://data.alod.ch/alod/level/fond">Fonds</option>
                 <option value="http://data.alod.ch/alod/level/subfond">Sub-Fonds</option>
@@ -28,8 +28,8 @@
         </div>
     </div>
     <div class="zack-filter" style="display: none">
-            <div data-filter-type="subhierarchy" data-object="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
-            <div data-filter-type="constraint" data-predicate="http://data.alod.ch/alod/conceptTag" data-object="tribunal civil" class="filter-item">Concept: trinunal civil</div>
+            <div disabled data-filter="=" data-inverse data-predicate="http://purl.org/dc/terms/hasPart" data-value="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" data-named-node class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
+            <div disabled data-filter="=" data-predicate="http://data.alod.ch/alod/conceptTag" data-value="tribunal civil" data-literal class="filter-item">Concept: trinunal civil</div>
     </div>
 </div>
 <div class="zack-result-list">
