added addFilter method to build filter div blocks

--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -27,9 +27,9 @@
             </select>
         </div>
     </div>
-    <div class="zack-filter" style="display: none">
-            <div disabled data-filter="=" data-inverse data-predicate="http://purl.org/dc/terms/hasPart" data-value="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" data-named-node class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
-            <div disabled data-filter="=" data-predicate="http://data.alod.ch/alod/conceptTag" data-value="tribunal civil" data-literal class="filter-item">Concept: trinunal civil</div>
+    <div id="filter-container" class="zack-filter">
+            <!-- div disabled data-filter="=" data-inverse data-predicate="http://purl.org/dc/terms/hasPart" data-value="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" data-named-node class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
+            <div disabled data-filter="=" data-predicate="http://data.alod.ch/alod/conceptTag" data-value="tribunal civil" data-literal class="filter-item">Concept: trinunal civil</div -->
     </div>
 </div>
 <div class="zack-result-list">
