--- a/modules/zack/public/index.html
+++ b/modules/zack/public/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div id="filter-container" class="zack-filter">
-            <!-- div disabled data-filter="=" data-inverse data-predicate="http://purl.org/dc/terms/hasPart" data-value="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" data-named-node class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
+            <!-- div data-filter="=" data-property-path-prefix="^" data-predicate="http://purl.org/dc/terms/hasPart" data-value="http://data.staatsarchiv-bs.ch/id/archivalresource/CH-000027-1/pa-633" data-named-node class="filter-item">Fonds: Archiv der Familie Ochs genannt His</div>
             <div disabled data-filter="=" data-predicate="http://data.alod.ch/alod/conceptTag" data-value="tribunal civil" data-literal class="filter-item">Concept: trinunal civil</div -->
     </div>
 </div>
