--- a/data/public/zack/index.html
+++ b/data/public/zack/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Zack</title>
 
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,400italic,700italic,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
