--- a/data/public/zack/index.html
+++ b/data/public/zack/index.html
@@ -18,14 +18,11 @@
             <input autofocus id="query" class="zack-query-input zack-big twelve columns" type="text" placeholder="Refine Results with Keywords.">
         </div>
         <div class="four columns space">
-            <select id="level-filter" data-filter="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-named-node class="zack-filter-select zack-big u-pull-right">
-                <option value='' selected>-</option>
-                <option value="http://data.alod.ch/alod/level/fond">Fonds</option>
-                <option value="http://data.alod.ch/alod/level/subfond">Sub-Fonds</option>
-                <option value="http://data.alod.ch/alod/level/series">Series</option>
-                <option value="http://data.alod.ch/alod/level/file">Files</option>
-                <option value="http://data.alod.ch/alod/level/item">Items</option>
-            </select>
+            <div id="level-filter" data-filterable="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-value="http://data.alod.ch/alod/level/item" data-named-node class="filterable" onclick="app.addFilter(this)">Items</div>
+            <div id="level-filter" data-filterable="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-value="http://data.alod.ch/alod/level/file" data-named-node class="filterable" onclick="app.addFilter(this)">Files</div>
+            <div id="level-filter" data-filterable="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-value="http://data.alod.ch/alod/level/series" data-named-node class="filterable" onclick="app.addFilter(this)">Series</div>
+            <div id="level-filter" data-filterable="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-value="http://data.alod.ch/alod/level/subfond" data-named-node class="filterable" onclick="app.addFilter(this)">Sub-Fonds</div>
+            <div id="level-filter" data-filterable="=" data-predicate="http://data.archiveshub.ac.uk/def/level" data-value="http://data.alod.ch/alod/level/fond" data-named-node class="filterable" onclick="app.addFilter(this)">Fonds</div>
         </div>
     </div>
     <div id="filter-container" class="zack-filter">
