--- a/data/public/zack/index.html
+++ b/data/public/zack/index.html
@@ -44,13 +44,13 @@
             <span id="count" class="zack-count zack-big"></span> <i>Results</i>
         </div>
     </div>
-    <div class="row">
+    <!--<div class="row">
         <div class="twelve columns" style="padding: 0 20px 0 20px;">
             Filter documents to be
             after <input id="from" type="date" data-filter=">=" data-predicate="http://www.w3.org/2006/time#intervalStarts"> and
             before <input id="to" type="date" data-filter="<=" data-predicate="http://www.w3.org/2006/time#intervalEnds">.
         </div>
-    </div>
+    </div>-->
 </div>
 <script src="zack.js"></script>
 </body>
